v2.0.0 - Updated version to 2.0.0 in pom.xml - Updated project to JDK 21 - Updated Token.java members to utilise newer sequenced list methods